@@ -1,4 +1,4 @@
 FROM openjdk:13-slim
-COPY build/libs/micronaut-test-*-all.jar app.jar
+COPY build/libs/micronaut-example-*-all.jar app.jar
 EXPOSE 8081
-CMD java -XX:+UseContainerSupport -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar app.jar
+CMD java --enable-preview -XX:+UseContainerSupport -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar app.jar
